se edita el footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </form>
     </main>
     <footer class="footer">
-        footer
+        Creado por Katerin Calderón
     </footer>
     <script src="./src/index.js"></script>
 </body>
